--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "@prisma/client": "^3.7.0"
+    "@prisma/client": "^3.7.0",
+    "bcrypt": "^5.0.1",
+    "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1"
   }
 }
